Progress bar and output suppression

--- a/examples/energy_depletion.ipynb
+++ b/examples/energy_depletion.ipynb
@@ -197,7 +197,128 @@
       " collapse: cpu time = 0.686     secs. \n",
       "     0 Fatal errors,    0 Errors and  1199 Warnings, for details see log file.\n",
       " inventory:cpu time =  1.00     secs.   No errors/warnings\n",
-      "Simulation TENDL-2017 to calculate 1875000.0MeV yield\n"
+      "Simulation TENDL-2017 to calculate 1875000.0MeV yield\n",
+      " collapse: cpu time = 0.548     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1220 Warnings, for details see log file.\n",
+      " inventory:cpu time = 0.457     secs. \n",
+      "     0 Fatal errors,    0 Errors and    21 Warnings, for details see log file.\n",
+      "Simulation TENDL-2017 to calculate 1375000.0MeV yield\n",
+      " collapse: cpu time = 0.562     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1220 Warnings, for details see log file.\n",
+      " inventory:cpu time = 0.433     secs. \n",
+      "     0 Fatal errors,    0 Errors and    21 Warnings, for details see log file.\n",
+      "Simulation TENDL-2017 to calculate 3875000.0MeV yield\n",
+      " collapse: cpu time = 0.605     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1199 Warnings, for details see log file.\n",
+      " inventory:cpu time = 0.746     secs.   No errors/warnings\n",
+      "Simulation TENDL-2017 to calculate 19000000.0MeV yield\n",
+      " collapse: cpu time = 0.881     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1199 Warnings, for details see log file.\n",
+      " inventory:cpu time =  1.86     secs.   No errors/warnings\n",
+      "Simulation TENDL-2017 to calculate 3125000.0MeV yield\n",
+      " collapse: cpu time = 0.665     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1199 Warnings, for details see log file.\n",
+      " inventory:cpu time = 0.734     secs.   No errors/warnings\n",
+      "Simulation TENDL-2017 to calculate 20000000.0MeV yield\n",
+      " collapse: cpu time =  1.00     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1199 Warnings, for details see log file.\n",
+      " inventory:cpu time =  1.67     secs.   No errors/warnings\n",
+      "Simulation TENDL-2017 to calculate 2750000.0MeV yield\n",
+      " collapse: cpu time = 0.597     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1201 Warnings, for details see log file.\n",
+      " inventory:cpu time = 0.672     secs. \n",
+      "     0 Fatal errors,    0 Errors and     2 Warnings, for details see log file.\n",
+      "Simulation TENDL-2017 to calculate 17000000.0MeV yield\n",
+      " collapse: cpu time = 0.768     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1199 Warnings, for details see log file.\n",
+      " inventory:cpu time =  1.43     secs.   No errors/warnings\n",
+      "Simulation TENDL-2017 to calculate 9400000.0MeV yield\n",
+      " collapse: cpu time = 0.673     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1199 Warnings, for details see log file.\n",
+      " inventory:cpu time = 0.989     secs.   No errors/warnings\n",
+      "Simulation TENDL-2017 to calculate 4400000.0MeV yield\n",
+      " collapse: cpu time = 0.616     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1199 Warnings, for details see log file.\n",
+      " inventory:cpu time = 0.783     secs.   No errors/warnings\n",
+      "Simulation TENDL-2017 to calculate 6400000.0MeV yield\n",
+      " collapse: cpu time = 0.643     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1199 Warnings, for details see log file.\n",
+      " inventory:cpu time = 0.865     secs.   No errors/warnings\n",
+      "Simulation TENDL-2017 to calculate 10000000.0MeV yield\n",
+      " collapse: cpu time = 0.811     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1199 Warnings, for details see log file.\n",
+      " inventory:cpu time =  1.19     secs.   No errors/warnings\n",
+      "Simulation TENDL-2017 to calculate 28000000.0MeV yield\n",
+      " collapse: cpu time = 0.885     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1199 Warnings, for details see log file.\n",
+      " inventory:cpu time =  1.87     secs.   No errors/warnings\n",
+      "Simulation TENDL-2017 to calculate 1750000.0MeV yield\n",
+      " collapse: cpu time = 0.791     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1220 Warnings, for details see log file.\n",
+      " inventory:cpu time = 0.483     secs. \n",
+      "     0 Fatal errors,    0 Errors and    21 Warnings, for details see log file.\n",
+      "Simulation TENDL-2017 to calculate 40000000.0MeV yield\n",
+      " collapse: cpu time =  1.23     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1199 Warnings, for details see log file.\n",
+      " inventory:cpu time =  3.29     secs.   No errors/warnings\n",
+      "Simulation TENDL-2017 to calculate 3500000.0MeV yield\n",
+      " collapse: cpu time =  3.83     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1199 Warnings, for details see log file.\n",
+      " inventory:cpu time =  1.28     secs.   No errors/warnings\n",
+      "Simulation TENDL-2017 to calculate 4200000.0MeV yield\n",
+      " collapse: cpu time =  1.64     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1199 Warnings, for details see log file.\n",
+      " inventory:cpu time =  1.35     secs.   No errors/warnings\n",
+      "Simulation TENDL-2017 to calculate 8000000.0MeV yield\n",
+      " collapse: cpu time = 0.994     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1199 Warnings, for details see log file.\n",
+      " inventory:cpu time = 0.991     secs.   No errors/warnings\n",
+      "Simulation TENDL-2017 to calculate 5600000.0MeV yield\n",
+      " collapse: cpu time = 0.715     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1199 Warnings, for details see log file.\n",
+      " inventory:cpu time = 0.978     secs.   No errors/warnings\n",
+      "Simulation TENDL-2017 to calculate 3625000.0MeV yield\n",
+      " collapse: cpu time = 0.675     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1199 Warnings, for details see log file.\n",
+      " inventory:cpu time = 0.875     secs.   No errors/warnings\n",
+      "Simulation TENDL-2017 to calculate 7800000.0MeV yield\n",
+      " collapse: cpu time = 0.741     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1199 Warnings, for details see log file.\n",
+      " inventory:cpu time =  1.09     secs.   No errors/warnings\n",
+      "Simulation TENDL-2017 to calculate 3250000.0MeV yield\n",
+      " collapse: cpu time = 0.696     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1199 Warnings, for details see log file.\n",
+      " inventory:cpu time = 0.776     secs.   No errors/warnings\n",
+      "Simulation TENDL-2017 to calculate 4600000.0MeV yield\n",
+      " collapse: cpu time = 0.618     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1199 Warnings, for details see log file.\n",
+      " inventory:cpu time = 0.826     secs.   No errors/warnings\n",
+      "Simulation TENDL-2017 to calculate 6800000.0MeV yield\n",
+      " collapse: cpu time = 0.642     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1199 Warnings, for details see log file.\n",
+      " inventory:cpu time = 0.861     secs.   No errors/warnings\n",
+      "Simulation TENDL-2017 to calculate 9000000.0MeV yield\n",
+      " collapse: cpu time = 0.719     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1199 Warnings, for details see log file.\n",
+      " inventory:cpu time =  1.48     secs.   No errors/warnings\n",
+      "Simulation TENDL-2017 to calculate 7000000.0MeV yield\n",
+      " collapse: cpu time =  1.29     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1199 Warnings, for details see log file.\n",
+      " inventory:cpu time =  1.24     secs.   No errors/warnings\n",
+      "Simulation TENDL-2017 to calculate 22000000.0MeV yield\n",
+      " collapse: cpu time = 0.880     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1199 Warnings, for details see log file.\n",
+      " inventory:cpu time =  1.85     secs.   No errors/warnings\n",
+      "Simulation TENDL-2017 to calculate 2875000.0MeV yield\n",
+      " collapse: cpu time = 0.665     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1201 Warnings, for details see log file.\n",
+      " inventory:cpu time = 0.705     secs. \n",
+      "     0 Fatal errors,    0 Errors and     2 Warnings, for details see log file.\n",
+      "Simulation TENDL-2017 to calculate 7400000.0MeV yield\n",
+      " collapse: cpu time =  1.07     secs. \n",
+      "     0 Fatal errors,    0 Errors and  1199 Warnings, for details see log file.\n",
+      " inventory:cpu time =  1.20     secs.   No errors/warnings\n",
+      "Simulation TENDL-2017 to calculate 11000000.0MeV yield\n"
      ]
     }
    ],
